Sort code cleanup