@@ -162,8 +162,7 @@ public class ViewService {
                     .stream()
                     .map(Measurement::getType)
                     .map(text -> text.substring(0, 1).toUpperCase() + text.substring(1))
-                    .sorted()
-                    .collect(Collectors.toList())));
+                    .sorted().toList()));
             return result;
         } finally {
             log.info("getDistinctAttributes completed at {}", this::now);
